--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ header {
 
 .container {
     margin-top: 60px;
-    /* text-align: center; */
 }
 
 .container-img {
@@ -175,4 +174,78 @@ box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px 0px rgba
 .retinol-six{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+
+
+.anti-aging h1{
+text-align: center;
+}
+.highly{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.anti-aging-picture{
+    margin: auto;
+    width: 50%;
+}
+
+
+.quality h1{
+    text-align: center;
+}
+.quality p{
+    text-align: center;
+}
+.quality-con{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.quality-img{
+
+    width: 60%;
+    margin: auto;
+    padding-top: 10%;
+}
+
+.quality-ul{
+    padding-top: 12%
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.contacts{
+    margin-top: 8%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    list-style-type: none;
+}
+.policy{
+    text-align: center;
+}
+.paragraph{
+    margin-top: 5%;
 }
