--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     width: 80%;
     margin: auto;
 }
+p,h2,h3,h1,h4,h5,h6,li,a{
+    line-height: 1.4;
+    letter-spacing: 1px;
+}
 
 body {
     margin: 0;
@@ -56,7 +60,7 @@ header {
 .first-img {
     margin: auto;
     margin-top: 70px;
-    width: 50%;
+    width: 30%;
 }
 
 .grey {
@@ -80,6 +84,10 @@ header {
     margin: auto;
     width: 60%;
 }
+.grey-section-two p{
+    text-align: justify;
+    margin: auto;
+}
 
 .grey-picture {
     width: 60%;
@@ -93,16 +101,17 @@ header {
 }
 
 .container-img {
-
     box-shadow: 0px 0px 20px -3px rgba(0, 0, 0, 0.75);
 }
 
-.kleem {
-text-align: justify;
+.kleem h2{
+margin: auto;
+width: 80%;
 }
 .kleem p{
     line-height: 1.4;
     letter-spacing: 1px;
+
 }
 
 .clinically-picture {
@@ -115,6 +124,9 @@ text-align: justify;
     grid-template-columns: 1fr 1fr;
     margin: 20px auto;
     width: 80%;
+}
+.clinically-text{
+    margin: auto;
 }
 
 .proven li{
@@ -330,9 +342,8 @@ text-align: center;
         margin: 0;
     }
 
-    .looking-skin{
-        background-image: url(../images/633ffe4ee4c20f340d0d3f64-pure-anti-wrinkle-face-neck.jpg);
-        background-image: url(../images/633ffe4…-pure-anti-wrinkle-face-neck.jpg);
+    .skin-background{
+        background-image: url(./Images/633ffe4ee4c20f340d0d3f64-pure-anti-wrinkle-face-neck.jpg);
         background-attachment: fixed;
         background-size: cover;
         background-position: center;
@@ -340,6 +351,16 @@ text-align: center;
         display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: multiply;
+    }
+    .skin-background ul{
+        color: #f1f1f1;
+    }
+    .skin-background ul li{
+        margin: 20px 0;
+        font-size: 20px;
+list-style-type: none;
     }
 
 
